--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -11,6 +11,7 @@
   html,
   body {
     margin: 0;
+    overflow-x: hidden;
     padding: 0;
     height: 100%;
   }
